# reinforcement-learning

./: .gitignore  Breakout_PG.py  LICENSE  README-kr.md  README.md  acrobot_PG.py  pyproject.toml  requirements.txt
01_policy_iteration/: policy_iteration.py
02_value_iteration/: run.py
03_monte_carlo/: run.py
05_q_learning/: agent.py
06_deep_q_learning/: CartPole.py  CartPole_DQN.py  ddqn.py  requirements.txt  snake_DQN.py  waterworld_PG.py
07_policy_gradient/: pong.h5
1-grid-world/: 1-policy_iteration.py  2-value_iteration.py  3-sarsa.py  4-q_learning.py  5-deep_sarsa.py  6-reinforce.py  README.md  env.py  gridworld.py
2-cartpole/: 1-dqn.py  2-a2c.py  3-ppo.py  cartpole.py  env.py
3-atari/: 1-dqn.py  2-ppo.py  LICENSE  Understanding DQN.pptx  env.py
4-atari-hard/: 1-ppo-rnd.py  2-count-based.py  2-go-explore.py  3-robustify.py  env.py  env_go_explore.py  env_robustify.py  extract_demo.py  run_io.py
6-atari-go-explore/: 1-go-explore.py  env.py
Code 1. Grid World/: README.md
Code 1. 그리드월드/: README.md
Code 2. Cartpole/: README.md
Code 2. 카트폴/: CartPole_DQN.py  Keras_test.py  catcher_DQN_plot.py  ddqn.py  dqn_agent.py  test.py  waterworld_PG.py
Code 3. 아타리게임/: README.md
cart_venv/: pyvenv.cfg
cartpole/: README.md
catcher_dqn/: agent.py  run.py
deep-q-learning/: CartPole.py  Catcher.py  Keras_CartPole_DQN.py  README.md  cartpole-dqn.h5  catcher_DQN_plot.py  ddqn.py  dqn.py  duel_ddqn.py  duel_refer.py  run_waterworld.py  snake_DQN.py  t.py  test.py  waterworld.py  waterworld_PG.py
dqn_moving/: 10by10 : 0  environment.py  episode : 0  (+24 more)
(+289 files in other folders)
